<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDEFEC"
    tools:context=".Tela10">

    <RadioGroup
        android:id="@+id/grpDez"
        android:layout_width="347dp"
        android:layout_height="549dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.587">

        <RadioButton
            android:id="@+id/alternativaADEZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caesar_dressing"
            android:text="@string/alternativaADEZ" />

        <ImageView
            android:id="@+id/imageView41"
            android:layout_width="140dp"
            android:layout_height="95dp"
            app:srcCompat="@drawable/botoni_cabecinha" />

        <RadioButton
            android:id="@+id/alternativaBDEZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caesar_dressing"
            android:text="@string/alternativaBDEZ" />

        <ImageView
            android:id="@+id/imageView42"
            android:layout_width="148dp"
            android:layout_height="87dp"
            app:srcCompat="@drawable/magrao_boquinha" />

        <RadioButton
            android:id="@+id/alternativaCDEZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caesar_dressing"
            android:text="@string/alternativaCDEZ" />

        <ImageView
            android:id="@+id/imageView43"
            android:layout_width="148dp"
            android:layout_height="85dp"
            app:srcCompat="@drawable/macedo_desmainho" />

        <RadioButton
            android:id="@+id/alternativaDDEZ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/caesar_dressing"
            android:text="@string/alternativaDDEZ" />

        <ImageView
            android:id="@+id/imageView40"
            android:layout_width="148dp"
            android:layout_height="91dp"
            app:srcCompat="@drawable/biel_nojentinho" />

    </RadioGroup>

    <TextView
        android:id="@+id/perguntaDez"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/caesar_dressing"
        android:text="@string/perguntaDez"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.117"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.098" />

    <TextView
        android:id="@+id/nomeTelaDez"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/caesar_dressing"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <TextView
        android:id="@+id/tituloPerguntaDez"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/caesar_dressing"
        android:text="@string/tituloPerguntaDez"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.249"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.051" />

    <Button
        android:id="@+id/btnRespostaDez"
        android:layout_width="317dp"
        android:layout_height="48dp"
        android:fontFamily="@font/caesar_dressing"
        android:text="@string/btnRespostaDez"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

</androidx.constraintlayout.widget.ConstraintLayout>